--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,5 +16,11 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
+    "morgan": "^1.10.0"
   }
 }
