--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,11 +18,15 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.13"
   }
 }
