Creacion de carpetas image y files en uploads

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,5 +1,14 @@
-PORT=
-MYSQL_DATABASE=
 MYSQL_HOST=
+MYSQL_PORT=
 MYSQL_USER=
 MYSQL_PASSWORD=
+MYSQL_DATABASE=
+
+PORT=
+SECRET=
+UPLOADS_DIR=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
