--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -8,7 +8,8 @@ PORT=
 JWT_SECRET=
 UPLOADS_DIR=
 
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
+# Credenciales para MAILTRAP (testing emails https://mailtrap.io/)
+MAIL_TRAP_HOST=
+MAIL_TRAP_PORT=
+MAIL_TRAP_AUTH_USER=
+MAIL_TRAP_AUTH_PASS=
