Modificacion DB para personalizacion de usuario admin desde las varibles de entorno

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -13,3 +13,13 @@ MAIL_TRAP_HOST=
 MAIL_TRAP_PORT=
 MAIL_TRAP_AUTH_USER=
 MAIL_TRAP_AUTH_PASS=
+
+# Creación del usurario administrador por defecto
+ADMIN_NAME=
+ADMIN_LAST_NAME=
+ADMIN_EMAIL=
+ADMIN_PHONE=
+# Roles admin, seller, delivery
+ADMIN_ROLE=
+# 1: activo, 0: inactivo
+ADMIN_ACTIVE=
