--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -6,7 +6,7 @@ MYSQL_DATABASE=
 
 PORT=
 JWT_SECRET=
-UPLOADS_DIR=
+UPLOADS_DIR=uploads
 
 # Credenciales para MAILTRAP (testing emails https://mailtrap.io/)
 MAIL_TRAP_HOST=
