--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,7 +30,6 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.13",
-    "uuid": "^9.0.1"
+    "nodemailer": "^6.9.13"
   }
 }
