--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -19,7 +19,7 @@ ADMIN_NAME=
 ADMIN_LAST_NAME=
 ADMIN_EMAIL=
 ADMIN_PHONE=
-# Roles admin, seller, delivery
+# Roles admin, salesAgent, delivery
 ADMIN_ROLE=
 # 1: activo, 0: inactivo
 ADMIN_ACTIVE=
