Agregado passAdmin manual en el env

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -19,6 +19,7 @@ ADMIN_NAME=
 ADMIN_LAST_NAME=
 ADMIN_EMAIL=
 ADMIN_PHONE=
+ADMIN_PASSWORD=
 # Roles admin, salesAgent, delivery
 ADMIN_ROLE=
 # 1: activo, 0: inactivo
