Agrupados los router y imports

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -19,6 +19,7 @@ ADMIN_NAME=
 ADMIN_LAST_NAME=
 ADMIN_EMAIL=
 ADMIN_PHONE=
+# Password para el Admin y todos los usuarios fake
 ADMIN_PASSWORD=
 # Roles admin, salesAgent, delivery
 ADMIN_ROLE=
