ultimo commit de union de rutas

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -19,6 +19,7 @@ ADMIN_NAME=
 ADMIN_LAST_NAME=
 ADMIN_EMAIL=
 ADMIN_PHONE=
+# Contraseña para el administrador y todos los user FAKE
 ADMIN_PASSWORD=
 # Roles admin, salesAgent, delivery
 ADMIN_ROLE=
