--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "sharp": "^0.33.3"
   }
 }
