--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
+    "sweetalert2": "^11.10.8",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
