--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,6 +35,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.13",
+    "pdf-lib": "^1.17.1",
     "sharp": "^0.33.3"
   }
 }
