--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-pdf/renderer": "^3.4.4",
     "joi": "^17.13.1",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.2.5",
