--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.13",
     "pdf-lib": "^1.17.1",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "uuid": "^9.0.1"
   }
 }
