--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.6.14",
     "universal-cookie": "^7.1.4"
   },
