--- a/Backend/package.json
+++ b/Backend/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.9.13",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.3",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
