--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,8 +23,10 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.6.14",
     "universal-cookie": "^7.1.4"
   },
