--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.6.14",
