--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,6 +38,7 @@
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.3",
     "socket.io": "^4.7.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   }
 }
